--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 9px;
 }
-
+/* header styling */
 
 .sticky-header {
   position: fixed;
@@ -50,6 +50,10 @@ header {
   color: #fff; 
   height: 40px;
 }
+.woman {
+  width: 300px;
+  height: 180px;
+}
 
 nav ul {
   list-style: none;
@@ -77,6 +81,7 @@ nav ul li a:hover {
   background-color: #555; 
 }
 
+/* section styling */
 
 section {
   margin-bottom: 30px;
@@ -85,7 +90,7 @@ section {
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
 }
-
+/* section About styling */
 #About {
   padding-top: 40px;
   background-color: #C5D5EA;
@@ -101,8 +106,11 @@ h1 {
   color: #555;
   margin-bottom: 10px;
 }
+/* section  Experience styling */
+
 #Experience {
   background-color: #C5D5EA;
+  padding: 40px 20px
 }
 
 h2 {
@@ -111,8 +119,10 @@ h2 {
   color: #555;
   margin-bottom: 8px;
 }
+
+/* section Projects styling */
 #projects {
-  
+
   padding: 40px 20px;
 }
 
@@ -129,7 +139,7 @@ h2 {
 ul {
   list-style-type: none;
 }
-
+/* section Skills styling */
 #skills {
   background-color:#C5D5EA;
   padding: 40px 20px; 
@@ -154,11 +164,6 @@ ul {
   font-size: 16px;
   margin-bottom: 8px;
 }
-.header {
-  background-color: #333;
-  padding: 20px;
-  color: #fff;
-}
 
 
 .skills-section {
@@ -172,13 +177,21 @@ ul {
   padding: 20px;
 }
 
-
-.footer {
-  background-color: #333;
-  padding: 20px;
-  color: #fff;
+/*section Connect styling*/
+#Connect {
+  padding: 40px 20px;
 }
 
+/* footer styling */
+
+  footer {
+    padding-left: 20px;
+    text-align: center;
+    background-color: #ddd;
+    color: #555;
+  }
+
+/* form styling*/
 form {
   max-width: 500px;
   margin: 0 auto;
@@ -244,12 +257,7 @@ button[type="submit"]:hover {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   background-color:#B3C5D7;
 }
-footer {
-  padding-left: 20px;
-  text-align: center;
-  background-color: #ddd;
-  color: #555;
-}
+
 .project p {
   font-size: 16px;
   color: #888; 
@@ -273,7 +281,7 @@ a {
 .view-button:hover {
   background-color: #0056b3;
 }
-
+/* Media Queries styling */
 
 @media only screen and (max-width: 600px) {
   body {
